--- a/package.json
+++ b/package.json
@@ -94,5 +94,5 @@
       "mees"
     ]
   },
-  "homepage": "http://mees-.github.io/deviceMotionReact/"
+  "homepage": "http://mees-.github.io/device-motion/"
 }
