--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "rc-slider": "^5.4.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "redux": "^3.6.0"
@@ -90,9 +91,15 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "mees"
-    ]
+      "mees",
+      "react-app"
+    ],
+    "rules": {
+      "jsx-quotes": [
+        "error",
+        "prefer-single"
+      ]
+    }
   },
   "homepage": "http://mees-.github.io/device-motion/"
 }
