--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-config-react-app": "^0.5.0",
     "eslint-loader": "1.6.0",
     "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.4.1",
     "extract-text-webpack-plugin": "1.0.1",
@@ -31,7 +31,7 @@
     "gh-pages": "^0.12.0",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.2",
+    "http-proxy-middleware": "^0.19.1",
     "jest": "17.0.2",
     "json-loader": "0.5.4",
     "object-assign": "4.1.0",
